# JMTEB

./: pyproject.toml
src/jmteb/configs/tasks/: clustering.jsonnet  clustering_embeddinggemma.jsonnet  clustering_qwen3_embedding.jsonnet  livedoor_news.jsonnet  mewsc16.jsonnet  sib200_clustering.jsonnet
src/jmteb/evaluators/clustering/: evaluator.py
