[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "JMTEB"
version = "1.3.3"
description = "The evaluation scripts for JMTEB (Japanese Massive Text Embedding Benchmark)"
authors = [
    { name = "shengzhe.li", email = "shengzhe.li@sbintuitions.co.jp" },
    { name = "ryokan.ri", email = "ryokan.ri@sbintuitions.co.jp" },
    { name = "masaya.ohagi", email = "masaya.ohagi@sbintuitions.co.jp" },
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "jsonargparse[jsonnet]>=4.27.5,<5",
    "loguru>=0.7.2,<0.8",
    "scikit-learn>=1.3.2,<2",
    "transformers[ja,sentencepiece]>=4.51.0,<5",
    "datasets>=2.17,<4",
    "sentence-transformers>=3.0.0,<4",
    "pytest==7.1.3",
    "torch~=2.3",
    "pydantic>=2.6.3,<3",
    "eval-type-backport>=0.1.3,<0.2",
    "smart-open>=7.0.1,<8",
    "openai>=1.16.2,<2",
    "pytest-mock>=3.14.0,<4",
    "tiktoken>=0.6.0,<0.7",
    "numpy~=1.26",
    "accelerate>=0.31.0,<0.32",
    "tabulate>=0.9.0,<0.10",
]

[dependency-groups]
dev = [
    "black>=23.11.0,<24",
    "isort>=5.12.0,<6",
    "mypy>=1.7.1,<2",
    "flake8>=7.0.0,<8",
    "tabulate>=0.9.0,<0.10",
]

[tool.hatch.build.targets.sdist]
include = ["src/jmteb"]

[tool.hatch.build.targets.wheel]
include = ["src/jmteb"]

[tool.hatch.build.targets.wheel.sources]
"src/jmteb" = "jmteb"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
